CMS 3.2 from DS (8/31~9/4 DS SVN Revision: 28~32)
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@3269 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-info.html
+++ b/epcurate-info.html
@@ -80,7 +80,7 @@
 
 <!--============================== content-main start ========================-->
 <div id="content-wrap" class="epcurate-info">
-<form name="epcurateForm" id="epcurateForm" method="get" action="">
+<form name="epcurateForm" id="epcurateForm" method="get" action="" class="clearfix">
 
 <div id="content-nav">
 &nbsp;
