--- a/channel-setting.html
+++ b/channel-setting.html
@@ -4,21 +4,25 @@
 <link rel="stylesheet" href="stylesheets/style.css" />
 <link rel="stylesheet" href="stylesheets/lightbox.css" />
 <link rel="stylesheet" href="stylesheets/channel.css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/jquery-ui.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+<script src="javascripts/nn-sdk.js"></script>
 <script src="javascripts/jquery.mousewheel.min.js"></script>
-<script src="javascripts/vertical.slider.js"></script>
 <script src="javascripts/jquery.ellipsis.js"></script>
-<script src="javascripts/jquery.corner.js"></script>
 <script src="javascripts/jquery.blockUI.js"></script>
+<script src="javascripts/jquery.corner.js"></script>
 <script src="javascripts/jquery.toggleval.min.js"></script>
-<!--[if lt IE 9]>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<script src="javascripts/automeasure.js"></script>
+<script src="javascripts/jquery.charcounter.min.js"></script>
+<script src="javascripts/jquery.tmpl.min.js"></script>
+<script src="javascripts/jquery.cookie.js"></script>
+<script src="javascripts/json2.js"></script>
+<script src="javascripts/purl.js"></script>
+<script src="javascripts/swfupload/swfupload.js"></script>
+<script src="javascripts/vertical.slider.js"></script>
 <script src="javascripts/basic.js"></script>
+<script src="javascripts/controller.js"></script>
 <script src="javascripts/channel.js"></script>
-<title>9x9.tv</title>
+<title>9x9.tv - Channel settings</title>
 </head>
 <body>
 
@@ -84,25 +88,22 @@ Add your 9x9.tv creations and activity to your facebook timeline
 <!--============================== header close ==============================-->
 
 <div id="studio-nav">
-<p id="process-notice">Saving...</p>
 <div class="studio-nav-wrap">
 <h3><a href="index.html">Studio</a></h3>
 <ul>
 <li class="on"><span><a href="index.html">My Channels</a></span></li>
-<li><span><a href="library-first.html">My Library</a></span></li>
-<li><span><a href="uploads-first.html">My Uploads</a></span></li>
 </ul>
 </div>
 </div>
 
 <!--============================== content-main start ========================-->
-<div id="content-wrap">
+<div id="content-wrap" class="channel-setting">
 
 <div id="content-nav">
 <div id="func-nav">
 <ul>
-<li><a href="episode-list-first.html" class="episode">Episode list</a></li>
-<li class="active"><a href="channel-setting.html" class="setting">Settings</a></li>
+<li><a href="" class="episode">Episode list</a></li>
+<li class="active"><a href="" class="setting">Settings</a></li>
 </ul>
 </div>
 </div>
@@ -111,122 +112,109 @@ Add your 9x9.tv creations and activity to your facebook timeline
 
 <div id="content-main">
 <div id="title-func" class="clearfix">
-<h2>The longest channel name ever created on this site in this ... > Settings</h2>
+<h2><span id="channel-name"></span> &gt; Settings</h2>
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>Required field</p>
 </div>
 
 <div id="content-main-wrap">
 <div class="constrain">
 <form name="settingForm" id="settingForm" method="get" action="">
-<div class="fminput">
-<label for="title"><acronym title="Required field" class="mark-required">*</acronym>Title</label>
+<div class="fminput clearfix">
+<label for="name"><acronym title="Required field" class="mark-required">*</acronym>Title</label>
 <div class="fmfield">
-<p class="text"><span><input type="text" name="title" id="title" maxlength="100" value="" class="text" /></span></p>
-<span class="notice">20　Best within 20 characters</span>
+<p class="text"><span><input type="text" name="name" id="name" maxlength="100" value="" class="text" /></span></p>
+<span class="notice"><span id="name-charcounter">20</span>　Best within 20 characters</span>
 </div>
 </div>
-<div class="fminput">
+<div class="fminput clearfix">
 <label>Thumbnail</label>
-<div class="fmfield">
-<p class="img"><img src="thumbnail/04.jpg" alt="" width="110" height="62" /></p>
-<p class="btns"><span><a href="#">Upload</a></span></p>
+<div class="fmfield upload-img">
+<p class="img"><img id="thumbnail-imageUrl" src="images/thumbnail_box_ch.png" alt="" class="thumbnail" /><img src="images/loading.gif" alt="" class="loading" /></p>
+<p id="uploadThumbnail">Upload</p>
 <p class="notice img-upload">Better results with 720x480 or higher resolution image</p>
-<p class="notice upload-notice">Please upload jpeg, png, or gif files.</p>
+<p class="notice upload-notice hide">Please upload jpeg, png, or gif files.</p>
+<input type="hidden" name="imageUrl" id="imageUrl" value="" />
 </div>
 </div>
-<div class="fminput">
+<div class="fminput clearfix">
 <label>Description</label>
 <div class="fmfield">
-<p class="textarea"><span><textarea name="description" id="description" cols="80" class="textarea"></textarea></span></p>
-<span class="notice">144<br />Best within 144 characters</span>
+<p class="textarea"><span><textarea name="intro" id="intro" cols="80" class="textarea"></textarea></span></p>
+<span class="notice"><span id="intro-charcounter">144</span><br />Best within 144 characters</span>
 </div>
 </div>
-<div class="fminput">
-<label><acronym title="Required field" class="mark-required">*</acronym>Category</label>
-<div class="fmfield">
-<div id="setting-category" class="select">
-<p id="btn-setting-category" class="select-btn"></p>
-<p id="selected-setting-category" class="select-txt"><a href="#">Select a category</a></p>
-<ul id="setting-category-drowdown" class="dropdown" style="display: none;">
-<li>All</li>
-<li>Fashion, Food & Living</li>
-<li>Nonprofits & Faith</li>
-<li>Animals & Pets</li>
-<li>Gaming</li>
-<li>People, Blogs & Shorts</li>
-</ul>
-</div>
-</div>
-</div>
-<div class="fminput">
-<label>Tag</label>
-<div class="fmfield">
-<p class="text"><span><input type="text" name="tag" id="tag" maxlength="100" value="" class="text tag" /></span></p>
-<span class="notice">Separate with commas</span>
-<div class="tag-list clear">
-<h4>Suggested Tags：</h4>
-<ul>
-<li><span><a href="#">Celebrites</a></span></li>
-<li><span><a href="#">World Journal</a></span></li>
-<li><span><a href="#">San Francisco</a></span></li>
-<li><span><a href="#">Celebrites</a></span></li>
-<li><span><a href="#">Jeremy Lin</a></span></li>
-<li><span><a href="#">Enternment</a></span></li>
-<li><span><a href="#">Happy Birthday</a></span></li>
-<li><span><a href="#">Best Restaurant</a></span></li>
-<li><span><a href="#">Lovely Kids</a></span></li>
-<li><span><a href="#">Somewhere</a></span></li>
-</ul>
-</div>
-</div>
-</div>
-<div class="fminput">
+<div class="fminput clearfix">
 <label><acronym title="Required field" class="mark-required">*</acronym>Channel language</label>
 <div class="fmfield">
-<div id="setting-lang" class="select">
-<p id="btn-setting-lang" class="select-btn"></p>
-<p id="selected-setting-lang" class="select-txt"><a href="#">Select a language</a></p>
-<ul id="setting-lang-drowdown" class="dropdown">
-<li>Englisth</li>
-<li>Chinese</li>
+<div class="select enable">
+<p class="select-btn"></p>
+<p class="select-txt"><a id="lang-select-txt" href="#">Select a language</a></p>
+<ul id="lang-select-list" class="select-list">
+<li data-meta="en">English</li>
+<li data-meta="zh">Chinese</li>
+<li data-meta="other">Others</li>
 </ul>
+<input type="hidden" name="lang" id="lang" value="" class="select-meta" />
 </div>
 </div>
 </div>
-<div class="fminput">
-<label><acronym title="Required field" class="mark-required">*</acronym>Audience location</label>
+<div class="fminput clearfix">
+<label><acronym title="Required field" class="mark-required">*</acronym>Audience region</label>
 <div class="fmfield">
-<div id="setting-loc" class="select">
-<p id="btn-setting-loc" class="select-btn"></p>
-<p id="selected-setting-loca" class="select-txt"><a href="#">Select a location</a></p>
-<ul id="setting-loca-drowdown" class="dropdown">
-<li>Taiwan</li>
-<li>Ethiopia</li>
+<div class="select enable">
+<p class="select-btn"></p>
+<p class="select-txt"><a id="sphere-select-txt" href="#">Select a region</a></p>
+<ul id="sphere-select-list" class="select-list">
+<li data-meta="en">US</li>
+<li data-meta="zh">Taiwan</li>
+<li data-meta="other">Worldwide</li>
 </ul>
+<input type="hidden" name="sphere" id="sphere" value="" class="select-meta" />
 </div>
 </div>
 </div>
-<div class="fminput">
-<label>Share new episode to Facebook page</label>
+<div class="fminput clearfix">
+<label><acronym title="Required field" class="mark-required">*</acronym>Category</label>
 <div class="fmfield">
-<img src="images/icon_fb.png" alt="facebook" class="icon" />
-<a href="#" class="switch-on">ON</a>
-<a href="#" class="switch-off">OFF</a>
-<div id="setting-fb" class="select">
-<p id="btn-setting-fb" class="select-btn"></p>
-<p id="selected-setting-fb" class="select-txt"><a href="#">Select a facebook page</a></p>
-<ul id="setting-fb-drowdown" class="dropdown">
-<li>facebook page1</li>
-<li>facebook page2</li>
+<div class="select disable category">
+<p class="select-btn"></p>
+<p class="select-txt"><a id="categoryId-select-txt" href="#">Select a category</a></p>
+<ul id="browse-category" class="select-list">
 </ul>
+<script id="category-list-tmpl-item" type="text/x-jquery-tmpl">
+{{if $item.dataArrayIndex($item.data) < 3}}
+<li class="first-row" data-meta="${id}">${name}</li>
+{{else}}
+<li data-meta="${id}">${name}</li>
+{{/if}}
+</script>
+<input type="hidden" name="categoryId" id="categoryId" value="" class="select-meta" />
 </div>
-<span class="notice">More share settings are in Account settings</span>
+</div>
+</div>
+<div class="fminput clearfix">
+<label>Tag</label>
+<div class="fmfield">
+<p class="text"><span><input type="text" name="tag" id="tag" maxlength="100" value="" class="text" /></span></p>
+<span class="notice">Separate with commas</span>
+<div class="tag-list hide clear">
+<h4>Suggested Tags:</h4>
+<ul id="tag-list">
+</ul>
+<script id="tag-list-tmpl-item" type="text/x-jquery-tmpl">
+{{each tags}}
+{{if $value != ""}}
+<li><span><a href="#">${$value}</a></span></li>
+{{/if}}
+{{/each}}
+</script>
+</div>
 </div>
 </div>
 <div class="form-btn">
 <div class="form-btn-wrap">
-<p class="notice">Please fill in all required fields.</p>
-<p class="btns btn-create"><span><input type="submit" value="Save" /></span></p>
+<p class="notice hide">Please fill in all required fields.</p>
+<p class="btns btn-save disable"><span><input type="button" value="Save" /></span></p>
 </div>
 </div>
 </form>
@@ -238,31 +226,73 @@ Add your 9x9.tv creations and activity to your facebook timeline
 <!--============================== content-main start ========================-->
 
 <!--============================== footer start ==============================-->
-<!-- Footer Begin -->
 <p id="footer-control"></p>
+
 <div id="footer">
-  <ul id="footer-list">
-    <li id="siteinfo">
-      <p id="btn-siteinfo"></p>
-      <p id="selected-siteinfo">Company</p>
-      <ul id="siteinfo-dropdown" class="dropdown">
-        <li class="on">Company</li>
-        <li>Blog</li>
-        <li>Forum</li>
-      </ul>
-    </li>
-    <li id="sitelang">
-      <p id="btn-sitelang"></p>
-      <p id="selected-sitelang">English Site</p>
-      <ul id="sitelang-dropdown" class="dropdown">
-        <li class="on">English Site</li>
-        <li>中文網站</li>
-      </ul>
-    </li>
-  </ul>
-  <p id="copyright"><span>&copy; 2012 9x9.tv.  All right reserved</span></p>
+	<ul id="footer-list">
+		<li>
+			<p class="select-txt">About Us</p>
+			<p class="select-btn"></p>
+			<ul class="select-list">
+				<li>About us</li>
+				<li>Help</li>
+				<li>Report</li>
+				<li>Terms & Policy</li>
+				<li>Contact us</li>
+				<li>Partners</li>
+				<li>Curators</li>
+				<li>Press</li>
+				<li>Curation Contest</li>
+			</ul>
+		</li>
+		<li>
+			<p class="select-txt">Language</p>
+			<p class="select-btn"></p>
+			<ul class="select-list">
+				<li>English</li>
+				<li>中文</li>
+			</ul>
+		</li>
+		<li>
+			<p class="select-txt">Region</p>
+			<p class="select-btn"></p>
+			<ul class="select-list">
+				<li>US</li>
+				<li>Taiwan</li>
+			</ul>
+		</li>
+	</ul>
 </div>
 <!--============================== footer close ==============================-->
+
+<div id="overlay-s">
+<p class="overlay-content"><span class="overlay-right"><span class="overlay-middle">Saving...</span></span></p>
+</div>
+
+<div id="system-error" class="lightbox-content overlay-l">
+<div class="overlay-container">
+<div class="overlay-wrap">
+<a href="#" class="btn-close">Close</a>
+<p class="content">You are not authorized to edit this channel.</p>
+<div class="overlay-btn">
+<p class="btns btn-ok"><span><a href="#">OK</a></span></p>
+</div>
+</div>
+</div>
+</div>
+
+<div id="unsave-prompt" class="lightbox-content overlay-l">
+<div class="overlay-container">
+<div class="overlay-wrap">
+<a href="#" class="btn-close">Close</a>
+<p class="content">Unsaved changes will be lost, are you sure you want to leave?</p>
+<div class="overlay-btn">
+<p class="btns btn-leave"><span><a href="#">Leave</a></span></p>
+<p class="btns btn-no"><span><a href="#">No</a></span></p>
+</div>
+</div>
+</div>
+</div>
 
 </body>
 </html>
